--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+
+    <!--TOP bar and Menu -->
     <div id="navigation-bar">
-        <div id="banner">
+        <div id="max-width">
             <div id="logo"><a href="#">Portfo<span>lio.</span></a>
                 <ul id="menu">
                     <li><a href="#">Home</a></li>
@@ -20,20 +22,86 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-
         </div>
     </div>
 
+    <!-- Home -->
     <div id="home">
-        <div id="banner">
+        <div id="max-width">
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
                 <div id="text-3">I'm a <span>Computer Science Student</span></div>
+                <a href="#">Contact-me</a>
             </div>
-
         </div>
     </div>
+
+
+    <!--About section -->
+    <div id="about">
+        <div id="max-width">
+            <h2 class="title">About me</h2>
+            <div id="about-content">
+                <div id="column-left">
+                    <img src="./assets/images/me.jpg" alt="My profile pic">
+                </div>
+                <div id="column-right">
+                    <div id="text">
+                        I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in Dublin.
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit tempora qui facere dicta ea laborum doloremque quis voluptatibus, at architecto nulla vitae molestias eaque aspernatur cupiditate mollitia? Dolores, quo!
+                    </p>
+                    <a href="#">My Linkedin</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Services section -->
+    <div id="services" class="services">
+        <div id="max-width">
+            <h2 class="title">Services</h2>
+            <div id="services-content">
+
+                <div id="card">
+
+                    <div id="box">
+                        <img id="img" src="./assets/images/iconmonstr-paintbrush-1.svg">
+                        <div id="text">
+                            Web Design
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                    </div>
+                    <br/>
+
+                    <div id="box">
+                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
+                        <div id="text">
+                            Java, HTML and CSS
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                    </div>
+
+                    <div id="box">
+                        <img id="img" src="./assets/images/iconmonstr-cloud-15.svg">
+                        <div id="text">
+                            Cloud
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis explicabo officiis similique ipsum impedit! Officia pariatur placeat, temporibus exercitationem provident sunt dolore perspiciatis voluptates nisi, nam reprehenderit molestiae ducimus
