--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+
     <a href="#home">
-        <div id="scroll-up-buttom">
+        <div id="scroll-up-buttom" class="scroll-up-buttom">
             <img src="./assets/images/iconmonstr-triangle-4-32.png" alt="Navigation up" height="30">
         </div>
     </a>
@@ -37,14 +38,14 @@
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
                 <div id="text-3">I'm a <span>Computer Science Student</span></div>
-                <a href="#">Contact-me</a>
+                <a href="#contact">Contact-me</a>
             </div>
         </div>
     </div>
 
 
     <!--About section -->
-    <section id="about">
+    <section id="about" class="about">
         <div id="max-width">
             <h2 class="title">About me</h2>
             <div id="about-content">
@@ -57,11 +58,13 @@
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit tempora qui facere dicta ea laborum doloremque quis voluptatibus, at architecto nulla vitae molestias eaque aspernatur cupiditate mollitia? Dolores, quo!
                     </p>
-                    <a href="#">My Linkedin</a>
+                    <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                 </div>
             </div>
         </div>
     </section>
+
+
 
 
     <!--Services section -->
