--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!--TOP bar and Menu -->
     <div id="navigation-bar">
         <div id="max-width">
-            <div id="logo"><a href="#">Portfo<span>lio.</span></a>
+            <div id="logo"><a href="#">itjunior<span>.dev</span></a>
                 <ul id="menu">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#Projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -56,9 +56,14 @@
                     <div id="text">
                         I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in Dublin.
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit tempora qui facere dicta ea laborum doloremque quis voluptatibus, at architecto nulla vitae molestias eaque aspernatur cupiditate mollitia? Dolores, quo!
-                    </p>
-                    <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
+                    <p>
+                        I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new adventures, to learn a new language and thriving to grow my skills.
+                        <p>I am passionate about technology and I am in my first year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
+                        <p> I am a gamer and nerd, also I like to go to the gym, hang out with my friends and take some photos like a pro, feel free to check my Instagram. </p>
+                        <p>I love to help my friends so my YouTube channel came to help me spread everything everything that I know about Ireland for those who wish to come here, alike I have a blog( mochilandonaeuropa.com) about tips and tricks in Ireland
+                            for Brazilians.</p>
+                        <p>Feel free to connect with me on my Linkedin</p>
+                        <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                 </div>
             </div>
         </div>
@@ -67,34 +72,45 @@
 
 
 
-    <!--Services section -->
-    <section id="services" class="services">
+    <!--Projects section -->
+    <section id="Projects" class="Projects">
         <div id="max-width">
-            <h2 class="title">Services</h2>
-            <div id="services-content">
+            <h2 class="title">Projects</h2>
+            <div id="Projects-content">
 
                 <div id="card">
                     <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-paintbrush-1.svg">
+                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
                         <div id="text">
-                            Web Design
+                            Web Design - Personal page
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                        <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+
                     </div>
-                    <br/>
+
                     <div id="box">
                         <img id="img" src="./assets/images/iconmonstr-code-2.svg">
                         <div id="text">
-                            Java, HTML and CSS
+                            <a href="http://mochilandonaeuropa.com/" target="_blank"> Mochilando na Europa</a>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                        <p>Personal blog which I talk travel with tips and tricks about Ireland for Brazilians.</p>
+                        <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
+                    </div>
+
+                    <div id="box">
+                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
+                        <div id="text">
+                            <a href="https://ijincorporadora.com.br/" target="_blank">IJ Incorporadora</a>
+                        </div>
+                        <p>This is a commercial website that I made for a Building company IJ Incorporadora.</p>
+                        <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the number of visits per month.</p>
                     </div>
                     <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-cloud-15.svg">
+                        <img id="img" src="./assets/images/iconmonstr-youtube-1.svg">
                         <div id="text">
-                            Cloud
+                            <a href="https://www.youtube.com/TIemDublin" target="_blank">TI em Dublin</a>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nemo error illo laudantium vitae quod, fuga doloremque natus aut deserunt. Quae, nostrum eius! Expedita ut odio molestiae et a sapiente!</p>
+                        <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.</p>
                     </div>
                 </div>
             </div>
@@ -108,11 +124,12 @@
             <div id="skills-content">
                 <div id="column-left">
                     <div id="text">
-                        My Skills and Experiences
+                        My Skills and Experiences in IT
                     </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias rem consequuntur facilis sequi fugiat hic, asperiores id quidem labore ut debitis explicabo nisi dolore soluta itaque omnis! Commodi, asperiores quia odit maxime eaque,
-                        unde ab, suscipit architecto placeat voluptate deserunt amet aut totam dolore illum rerum. Tenetur voluptatem, aut quia autem aspernatur quidem fugit officia dolorum consectetur. Necessitatibus, at eius.</p>
-                    <a href="#">Read more</a>
+                    <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/> I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to set
+                        up a web environment, including shared or cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/> If you want to know more about me feel free to have a look at my Linkedin profile.</p>
+                    <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
+
                 </div>
 
                 <div id="column-right">
@@ -168,9 +185,10 @@
         <div id="max-width">
             <h2 class="title">Contact me</h2>
             <div id="contact-content">
-                <div id="column">
-                    <div id="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sed veritatis sequi nemo tempora debitis laboriosam incidunt laudantium rerum. Accusantium.</p>
+                <div id="column" class="network">
+                    <div id="text">Get in touch</div>
+                    <p>Feel free to get in touch also to connect with on networks bellow.</p>
+
                     <div id="icons">
                         <div id="row">
                             <img src="./assets/images/iconmonstr-user-20.svg">
@@ -189,7 +207,6 @@
                             </div>
                         </div>
                         <div id="row">
-
                             <img src="./assets/images/iconmonstr-email-14.svg">
                             <div id="info">
                                 <a href="mailto:hello@itjunior.dev">
@@ -199,7 +216,44 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="icons2">
+                        <div id="row">
+                            <img src="./assets/images/iconmonstr-github-5.svg">
+                            <div id="info">
+                                <a href="https://github.com/codeitamarjr" target="_blank">
+                                    <div id="head">GitHub</div>
+                                    <div id="subtitle">codeitamarjr</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="row">
+                            <img src="./assets/images/iconmonstr-linkedin-5.svg">
+                            <div id="info">
+                                <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">
+                                    <div id="head">Linkedin</div>
+                                    <div id="subtitle">My Linkedin</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="row">
+                            <img src="./assets/images/iconmonstr-facebook-5.svg">
+                            <div id="info">
+                                <a href="https://www.facebook.com/ita.junior" target="_blank">
+                                    <div id="head">Facebook</div>
+                                    <div id="subtitle">My Facebook profile</div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
                 </div>
+
+
+
             </div>
         </div>
     </section>
