--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div id="box">
                         <img id="img" src="./assets/images/iconmonstr-code-2.svg">
                         <div id="text">
-                            Web Design - Personal page
+                            <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">Personal page</a>
                         </div>
                         <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
 
