--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
+
 
 <head>
+    <meta charset="UTF-8">
     <title>
         Itamar Junior
     </title>
@@ -18,7 +20,7 @@
 
     <!--TOP bar and Menu -->
     <div id="navigation-bar">
-        <div id="max-width">
+        <div class="max-width">
             <div id="logo"><a href="#">itjunior<span>.dev</span></a>
                 <ul id="menu">
                     <li><a href="/">Home</a></li>
@@ -33,7 +35,7 @@
 
     <!-- Home -->
     <div id="home">
-        <div id="max-width">
+        <div class="max-width">
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
@@ -46,14 +48,14 @@
 
     <!--About section -->
     <section id="about" class="about">
-        <div id="max-width">
+        <div class="max-width">
             <h2 class="title">About me</h2>
             <div id="about-content">
-                <div id="column-left">
+                <div class="column-left">
                     <img src="./assets/images/me.jpg" alt="My profile pic">
                 </div>
-                <div id="column-right">
-                    <div id="text">
+                <div class="column-right">
+                    <div class="text">
                         I am Itamar Junior and I am a <span>Computer Science</span> student at Dorset College in Dublin.
                     </div>
                     <p>
@@ -74,40 +76,40 @@
 
     <!--Projects section -->
     <section id="Projects" class="Projects">
-        <div id="max-width">
+        <div class="max-width">
             <h2 class="title">Projects</h2>
             <div id="Projects-content">
 
                 <div id="card">
-                    <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
-                        <div id="text">
+                    <div class="box">
+                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
+                        <div class="text">
                             <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">Personal page</a>
                         </div>
                         <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
 
                     </div>
 
-                    <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
-                        <div id="text">
+                    <div class="box">
+                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
+                        <div class="text">
                             <a href="http://mochilandonaeuropa.com/" target="_blank"> Mochilando na Europa</a>
                         </div>
                         <p>Personal blog which I talk travel with tips and tricks about Ireland for Brazilians.</p>
                         <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
                     </div>
 
-                    <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-code-2.svg">
-                        <div id="text">
+                    <div class="box">
+                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
+                        <div class="text">
                             <a href="https://ijincorporadora.com.br/" target="_blank">IJ Incorporadora</a>
                         </div>
                         <p>This is a commercial website that I made for a Building company IJ Incorporadora.</p>
                         <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the number of visits per month.</p>
                     </div>
-                    <div id="box">
-                        <img id="img" src="./assets/images/iconmonstr-youtube-1.svg">
-                        <div id="text">
+                    <div class="box">
+                        <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
+                        <div class="text">
                             <a href="https://www.youtube.com/TIemDublin" target="_blank">TI em Dublin</a>
                         </div>
                         <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.</p>
@@ -119,11 +121,11 @@
 
     <!--Skill's section -->
     <section id="skills">
-        <div id="max-width">
+        <div class="max-width">
             <h2 class="title">My Skills</h2>
             <div id="skills-content">
-                <div id="column-left">
-                    <div id="text">
+                <div class="column-left">
+                    <div class="text">
                         My Skills and Experiences in IT
                     </div>
                     <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/> I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to set
@@ -132,47 +134,47 @@
 
                 </div>
 
-                <div id="column-right">
+                <div class="column-right">
 
-                    <div id="bars">
-                        <div id="info">
+                    <div class="bars">
+                        <div class="info">
                             <span>HTML</span>
                             <span>50%</span>
                         </div>
-                        <div id="line" class="html"></div>
+                        <div class="line html"></div>
 
 
                     </div>
-                    <div id="bars">
-                        <div id="info">
+                    <div class="bars">
+                        <div class="info">
                             <span>PHP</span>
                             <span>40%</span>
                         </div>
-                        <div id="line" class="php"></div>
+                        <div class="line php"></div>
 
                     </div>
-                    <div id="bars">
-                        <div id="info">
+                    <div class="bars">
+                        <div class="info">
                             <span>CSS</span>
                             <span>40%</span>
                         </div>
-                        <div id="line" class="css"></div>
+                        <div class="line css"></div>
 
                     </div>
-                    <div id="bars">
-                        <div id="info">
+                    <div class="bars">
+                        <div class="info">
                             <span>JAVA</span>
                             <span>30%</span>
                         </div>
-                        <div id="line" class="java"></div>
+                        <div class="line java"></div>
 
                     </div>
-                    <div id="bars">
-                        <div id="info">
+                    <div class="bars">
+                        <div class="info">
                             <span>MySQL</span>
                             <span>50%</span>
                         </div>
-                        <div id="line" class="mysql"></div>
+                        <div class="line mysql"></div>
                     </div>
                 </div>
             </div>
@@ -182,66 +184,66 @@
     <!--Contact section -->
 
     <section id="contact" class="contact">
-        <div id="max-width">
+        <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div id="contact-content">
                 <div id="column" class="network">
-                    <div id="text">Get in touch</div>
+                    <div class="text">Get in touch</div>
                     <p>Feel free to get in touch also to connect with on networks bellow.</p>
 
                     <div id="icons">
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-user-20.svg">
-                            <div id="info">
-                                <div id="head">Name</div>
-                                <div id="subtitle">Itamar Junior</div>
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-user-20.svg" alt="User icon">
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="subtitle">Itamar Junior</div>
                             </div>
                         </div>
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-location-2.svg">
-                            <div id="info">
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-location-2.svg" alt="Location icon">
+                            <div class="info">
                                 <a href="https://www.google.com/maps/place/Dublin/" target="_blank">
-                                    <div id="head">Address</div>
-                                    <div id="subtitle">Dublin, Ireland</div>
+                                    <div class="head">Address</div>
+                                    <div class="subtitle">Dublin, Ireland</div>
                                 </a>
                             </div>
                         </div>
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-email-14.svg">
-                            <div id="info">
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-email-14.svg" alt="Email icon">
+                            <div class="info">
                                 <a href="mailto:hello@itjunior.dev">
-                                    <div id="head">Email</div>
-                                    <div id="subtitle">hello@itjunior.dev</div>
+                                    <div class="head">Email</div>
+                                    <div class="subtitle">hello@itjunior.dev</div>
                                 </a>
                             </div>
                         </div>
                     </div>
 
                     <div id="icons2">
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-github-5.svg">
-                            <div id="info">
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-github-5.svg" alt="Github icon">
+                            <div class="info">
                                 <a href="https://github.com/codeitamarjr" target="_blank">
-                                    <div id="head">GitHub</div>
-                                    <div id="subtitle">codeitamarjr</div>
+                                    <div class="head">GitHub</div>
+                                    <div class="subtitle">codeitamarjr</div>
                                 </a>
                             </div>
                         </div>
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-linkedin-5.svg">
-                            <div id="info">
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-linkedin-5.svg" alt="Linkedin icon">
+                            <div class="info">
                                 <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">
-                                    <div id="head">Linkedin</div>
-                                    <div id="subtitle">My Linkedin</div>
+                                    <div class="head">Linkedin</div>
+                                    <div class="subtitle">My Linkedin</div>
                                 </a>
                             </div>
                         </div>
-                        <div id="row">
-                            <img src="./assets/images/iconmonstr-facebook-5.svg">
-                            <div id="info">
+                        <div class="row">
+                            <img src="./assets/images/iconmonstr-facebook-5.svg" alt="Facebook icon">
+                            <div class="info">
                                 <a href="https://www.facebook.com/ita.junior" target="_blank">
-                                    <div id="head">Facebook</div>
-                                    <div id="subtitle">My Facebook profile</div>
+                                    <div class="head">Facebook</div>
+                                    <div class="subtitle">My Facebook profile</div>
                                 </a>
                             </div>
                         </div>
