--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         Itamar Junior
     </title>
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="icon" href="./assets/images/iconmonstr-code-2.svg" type="image/x-icon">
 </head>
 
 <body>
