--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div id="contact-content">
                 <div id="column" class="network">
                     <div class="text">Get in touch</div>
-                    <p>Feel free to get in touch also to connect with on networks bellow.</p>
+                    <p>Feel free to get in touch also to connect with me on the networks bellow.</p>
 
                     <div id="icons">
                         <div class="row">
