minor logo href fix.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--TOP bar and Menu -->
     <div id="navigation-bar">
         <div class="max-width">
-            <div id="logo"><a href="#">itjunior<span>.dev</span></a>
+            <div id="logo"><a href="/">itjunior<span>.dev</span></a>
                 <ul id="menu">
                     <li><a href="/">Home</a></li>
                     <li><a href="#about">About</a></li>
