fixed a link inside projects

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <h2 class="title">Contact me</h2>
             <div id="contact-content">
                 <div id="column" class="network">
-                    <div class="text">Get in touch</div>
+                    <div class="text">Find me</div>
                     <p>Feel free to get in touch also to connect with me on the networks bellow.</p>
 
                     <div id="icons">
@@ -235,7 +235,7 @@
                             <div class="info">
                                 <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">
                                     <div class="head">Linkedin</div>
-                                    <div class="subtitle">My Linkedin</div>
+                                    <div class="subtitle">itamarjr</div>
                                 </a>
                             </div>
                         </div>
