--- a/index.html
+++ b/index.html
@@ -82,40 +82,49 @@
             <div id="Projects-content">
 
                 <div id="card">
-                    <div class="box">
-                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
-                        <div class="text">
-                            <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">Personal page</a>
-                        </div>
-                        <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
 
-                    </div>
+                    <a href="https://github.com/codeitamarjr/S2UXUIPersonalPage" target="_blank">
+                        <div class="box">
+                            <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
+                            <div class="text">
+                                Personal page
+                            </div>
+                            <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                        </div>
+                    </a>
 
-                    <div class="box">
-                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
-                        <div class="text">
-                            <a href="http://mochilandonaeuropa.com/" target="_blank"> Mochilando na Europa</a>
+                    <a href="http://mochilandonaeuropa.com/" target="_blank">
+                        <div class="box">
+                            <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
+                            <div class="text">
+                                Mochilando na Europa
+                            </div>
+                            <p>Personal blog which I talk travel with tips and tricks about Ireland for Brazilians.</p>
+                            <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
                         </div>
-                        <p>Personal blog which I talk travel with tips and tricks about Ireland for Brazilians.</p>
-                        <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
-                    </div>
+                    </a>
 
-                    <div class="box">
-                        <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
-                        <div class="text">
-                            <a href="https://ijincorporadora.com.br/" target="_blank">IJ Incorporadora</a>
+                    <a href="https://ijincorporadora.com.br/" target="_blank">
+                        <div class="box">
+                            <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Icon code image">
+                            <div class="text">
+                                IJ Incorporadora
+                            </div>
+                            <p>This is a commercial website that I made for a Building company IJ Incorporadora.</p>
+                            <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the number of visits per month.</p>
                         </div>
-                        <p>This is a commercial website that I made for a Building company IJ Incorporadora.</p>
-                        <p>I used WordPress hosted on Linux Shared Web Service to fit the budget and also the number of visits per month.</p>
-                    </div>
-                    <div class="box">
-                        <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
-                        <div class="text">
-                            <a href="https://www.youtube.com/TIemDublin" target="_blank">TI em Dublin</a>
+                    </a>
+
+                    <a href="https://www.youtube.com/TIemDublin" target="_blank">
+                        <div class="box">
+                            <img class="img" src="./assets/images/iconmonstr-youtube-1.svg" alt="Youtube">
+                            <div class="text">
+                                TI em Dublin
+                            </div>
+                            <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.</p>
                         </div>
-                        <p>This is my YouTube channel where I share my experiences living abroad, to help other peoples from my country, also share some tips and tricks about my Bsc. in Computing.</p>
-                    </div>
                 </div>
+                </a>
             </div>
         </div>
     </section>
