px>vh and fix responsible report from Goole.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 
 <head>
+    <!--  Adding the value initial-scale=1 instructs browsers to establish a 1:1 relationship between
+        CSS pixels and device-independent pixels regardless of device orientation,
+        and allows the page to take advantage of the full landscape width. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>
         Itamar Junior
@@ -15,7 +19,7 @@
 
     <a href="#home">
         <div id="scroll-up-buttom" class="scroll-up-buttom">
-            <img src="./assets/images/iconmonstr-triangle-4-32.png" alt="Navigation up" height="30">
+            <img src="./assets/images/iconmonstr-triangle-4-32.png" alt="Navigation up">
         </div>
     </a>
 
@@ -193,6 +197,8 @@
 
     <!--Contact section -->
 
+
+
     <section id="contact" class="contact">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
@@ -201,7 +207,7 @@
                     <div class="text">Find me</div>
                     <p>Feel free to get in touch also to connect with me on the networks bellow.</p>
 
-                    <div id="icons">
+                    <div class="icons-row1">
                         <div class="row">
                             <img src="./assets/images/iconmonstr-user-20.svg" alt="User icon">
                             <div class="info">
@@ -229,7 +235,7 @@
                         </div>
                     </div>
 
-                    <div id="icons2">
+                    <div class="icons-row2">
                         <div class="row">
                             <img src="./assets/images/iconmonstr-github-5.svg" alt="Github icon">
                             <div class="info">
@@ -253,24 +259,19 @@
                             <div class="info">
                                 <a href="https://www.facebook.com/ita.junior" target="_blank">
                                     <div class="head">Facebook</div>
-                                    <div class="subtitle">My Facebook profile</div>
+                                    <div class="subtitle">Facebook profile</div>
                                 </a>
                             </div>
                         </div>
                     </div>
 
-
-
-
                 </div>
-
-
-
             </div>
+        </div>
         </div>
     </section>
 
-    <!--Contact section -->
+    <!--Footer section -->
     <footer>
         <span>Created by <a href="mailto:hello@itjunior.dev">Itamar Junior</a> | <span> </span> 2021 All rights reserved.</span>
     </footer>
