--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                             I am 33 years old and I moved from Brazil to Ireland in May of 2018 looking for new adventures, to learn a new language and thriving to grow my skills.
                             <p>I am passionate about technology and I am in my first year of Computer Science studies at Dorset College in Dublin, although I am a freshman I already love to code!</p>
                             <p> I am a gamer and nerd, also I like to go to the gym, hang out with my friends and take some photos like a pro, feel free to check my Instagram. </p>
-                            <p>I love to help my friends so my YouTube channel came to help me spread everything everything that I know about Ireland for those who wish to come here, alike I have a blog( mochilandonaeuropa.com) about tips and tricks in Ireland
-                                for Brazilians.</p>
+                            <p>I love to help my friends so my YouTube channel came to help me share everything that I know about Ireland for those who wish to come here, alike I have a blog( mochilandonaeuropa.com) about tips and tricks in Ireland for Brazilians.</p>
                             <p>Feel free to connect with me on my Linkedin</p>
                             <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
                     </div>
