--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <div class="text">
                                     Personal page
                                 </div>
-                                <p>If you want to have a look at this code you can check the source code available on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>If you want to have a look at the HMTL and CSS code of this page you can check on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
