update and add links anchor page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!--Projects section -->
         <section id="Projects" class="Projects">
             <div class="max-width">
-                <h2 class="title">Projects</h2>
+                <h2 class="title">My Projects</h2>
                 <div id="Projects-content">
 
                     <div id="card">
