fixed responsive menu

--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+
+
+                <div class="responsive">
+                    <a href="#menuresponsivo">
+                        <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg" alt="Menu responsive">
+                    </a>
+                    <a href="#click">
+                        <div id="menuresponsivo">
+                            <li><a href="/">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#Projects">Projects</a></li>
+                            <li><a href="#skills">Skills</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </div>
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
