fixed responsive menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
 
-
+                <!-- Responsive menu  -->
                 <div class="responsive">
                     <a href="#menuresponsivo">
                         <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg" alt="Menu responsive">
@@ -43,6 +43,8 @@
                         </div>
                     </a>
                 </div>
+                <!-- End responsive menu  -->
+
 
             </div>
         </div>
