title fixed so shrink my projects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Responsive menu  -->
                 <div class="responsive">
                     <a href="#menuresponsivo">
-                        <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg" alt="Menu responsive">
+                        <img class="menu-responvive-img" src="./assets/images/iconmonstr-menu-6.svg" alt="Menu responsive" width="30" height="30">
                     </a>
                     <a href="#click">
                         <div id="menuresponsivo">
