--- a/index.html
+++ b/index.html
@@ -100,9 +100,19 @@
                             <div class="box">
                                 <img class="img" src="./assets/images/iconmonstr-code-2.svg" alt="Code icon">
                                 <div class="text">
-                                    Personal page
+                                    Personal page v2.0
                                 </div>
                                 <p>If you want to have a look at the HMTL and CSS code of this page you can check on github.com/codeitamarjr/Blog <br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                            </div>
+                        </a>
+
+                        <a href="https://github.com/codeitamarjr/Blog_version1.0" target="_blank">
+                            <div class="box">
+                                <img class="img" src="./assets/images/Bootstrap_logo.svg" alt="Code icon">
+                                <div class="text">
+                                    Personal page v1.0
+                                </div>
+                                <p>This is the my first personal page, a responsive page that I used Bootstrap and custom CSS<br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
@@ -171,7 +181,7 @@
                         <div class="bars">
                             <div class="info">
                                 <span>PHP</span>
-                                <span>40%</span>
+                                <span>30%</span>
                             </div>
                             <div class="line php"></div>
 
@@ -187,7 +197,7 @@
                         <div class="bars">
                             <div class="info">
                                 <span>JAVA</span>
-                                <span>30%</span>
+                                <span>40%</span>
                             </div>
                             <div class="line java"></div>
 
@@ -195,7 +205,7 @@
                         <div class="bars">
                             <div class="info">
                                 <span>MySQL</span>
-                                <span>50%</span>
+                                <span>30%</span>
                             </div>
                             <div class="line mysql"></div>
                         </div>
