--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <div class="text">
                                     Personal page v1.0
                                 </div>
-                                <p>This is the my first personal page, a responsive page that I used Bootstrap and custom CSS<br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
+                                <p>This is my first personal page, a responsive page that I made with Bootstrap and custom CSS<br/>*It is also available under the MIT License, so feel free to copy and modify as you want.</p>
                             </div>
                         </a>
 
