--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <div class="text">
                                     Mochilando na Europa
                                 </div>
-                                <p>Personal blog which I talk travel with tips and tricks about Ireland for Brazilians.</p>
+                                <p>Personal blog which I talk about travel with tips and tricks about Ireland for Brazilians.</p>
                                 <p>I use WordPress hosted on an EC2 by AWS, protected by Cloudfare.</p>
                             </div>
                         </a>
