--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="max-width">
                 <h2 class="title">My Skills</h2>
                 <div id="skills-content">
-                    <div class="column-left">
+                    <div class="column">
                         <div class="text">
                             My Skills and Experiences in IT
                         </div>
@@ -167,49 +167,7 @@
 
                     </div>
 
-                    <div class="column-right">
-
-                        <div class="bars">
-                            <div class="info">
-                                <span>HTML</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="line html"></div>
-
-
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>PHP</span>
-                                <span>30%</span>
-                            </div>
-                            <div class="line php"></div>
-
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>CSS</span>
-                                <span>40%</span>
-                            </div>
-                            <div class="line css"></div>
-
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>JAVA</span>
-                                <span>40%</span>
-                            </div>
-                            <div class="line java"></div>
-
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>MySQL</span>
-                                <span>30%</span>
-                            </div>
-                            <div class="line mysql"></div>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </section>
