--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
                         <div class="text">
                             My Skills and Experiences in IT
                         </div>
-                        <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/> I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to
-                            set up a web environment, including shared or cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/> If you want to know more about me feel free to have a look at my Linkedin profile.</p>
+                        <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/>
+                            I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to
+                            set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/>
+                            If you want to know more about me feel free to have a look at my Linkedin profile.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
                     </div>
