--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <div id="home-content">
                 <div id="text-1">Hello, my name is</div>
                 <div id="text-2">Itamar Junior</div>
-                <div id="text-3">I'm a <span>Computer Science Student</span></div>
+                <div id="text-3">I am a <span>Computer Science Student<br></span>
+                ... and a future Software Engineer</div>
                 <a href="#contact">Contact-me</a>
             </div>
         </div>
@@ -164,6 +165,7 @@
                         <p> I am learning Java and as you see I know something about UI technologies and frameworks such as Bootstrap, also CSS and HTML.<br/>
                             I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to
                             set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/>
+                            Out of college I am learning data structure and also, how to Master Java on Coursera :D<br>
                             If you want to know more about me feel free to have a look at my Linkedin profile.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
