code and skills

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
     </div>
 
+    <!--Main container to wrap all the content and activate the up scroll buttom -->
     <div id="navigator-up">
 
         <!--About section -->
@@ -166,6 +167,7 @@
                             I have knowledge about CMOS using a WordPress system for the last 4 years, web servers and how to
                             set up a web environment, including shared and cloud hosting( EC2 on AWS) and experience with database systems like MySQL.<br/>
                             Out of college I am learning data structure and also, how to Master Java on Coursera :D<br>
+                            I am using Visual Studio Code, although I also have IntelliJ, version control from GitHub and Bootstrap to helps me with others web projects.
                             If you want to know more about me feel free to have a look at my Linkedin profile.</p>
                         <a href="https://www.linkedin.com/in/itamarjr/" target="_blank">My Linkedin</a>
 
